--- a/TPR_ExampleView/TPR_ExampleView.csproj
+++ b/TPR_ExampleView/TPR_ExampleView.csproj
@@ -92,10 +92,20 @@
     <Compile Include="Form1.Designer.cs">
       <DependentUpon>Form1.cs</DependentUpon>
     </Compile>
+    <Compile Include="ImageForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="ImageForm.Designer.cs">
+      <DependentUpon>ImageForm.cs</DependentUpon>
+    </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="TabDragger.cs" />
     <EmbeddedResource Include="Form1.resx">
       <DependentUpon>Form1.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="ImageForm.resx">
+      <DependentUpon>ImageForm.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
@@ -150,6 +160,24 @@
       <Project>{61858e9e-5fe8-4805-b778-cbe06d65a31f}</Project>
       <Name>TestLibrary</Name>
     </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\закрыть-окно-32.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\отмеченный-чекбокс-2-32.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\пустой-чекбокс-32.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\свернуть-32.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\сохранить-32.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="Resources\восстановить-32.png" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="..\packages\EMGU.CV.3.4.3.3016\build\EMGU.CV.targets" Condition="Exists('..\packages\EMGU.CV.3.4.3.3016\build\EMGU.CV.targets')" />
