--- a/TPR_ExampleView/App.config
+++ b/TPR_ExampleView/App.config
@@ -19,6 +19,9 @@
             <setting name="HideExplorer" serializeAs="String">
                 <value>False</value>
             </setting>
+            <setting name="ExplorerPath" serializeAs="String">
+                <value />
+            </setting>
         </TPR_ExampleView.Properties.Settings>
     </userSettings>
 </configuration>
