--- a/BaseLibrary/BaseLibrary.csproj
+++ b/BaseLibrary/BaseLibrary.csproj
@@ -70,6 +70,12 @@
       <DependentUpon>ImageForm.cs</DependentUpon>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="SelectCoord.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="SelectCoord.Designer.cs">
+      <DependentUpon>SelectCoord.cs</DependentUpon>
+    </Compile>
     <Compile Include="TabDragger.cs" />
   </ItemGroup>
   <ItemGroup>
@@ -81,6 +87,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="ImageForm.resx">
       <DependentUpon>ImageForm.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="SelectCoord.resx">
+      <DependentUpon>SelectCoord.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
