--- a/BaseLibrary/BaseLibrary.csproj
+++ b/BaseLibrary/BaseLibrary.csproj
@@ -56,39 +56,42 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="BaseForm.cs">
+    <Compile Include="Forms\BaseForm.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="BaseForm.Designer.cs">
+    <Compile Include="Forms\BaseForm.Designer.cs">
       <DependentUpon>BaseForm.cs</DependentUpon>
     </Compile>
-    <Compile Include="Class1.cs" />
-    <Compile Include="ImageForm.cs">
+    <Compile Include="BaseMethods.cs" />
+    <Compile Include="Forms\ImageForm.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="ImageForm.Designer.cs">
+    <Compile Include="Forms\ImageForm.Designer.cs">
       <DependentUpon>ImageForm.cs</DependentUpon>
     </Compile>
+    <Compile Include="InputImage.cs" />
+    <Compile Include="OutputImage.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="SelectCoord.cs">
+    <Compile Include="Forms\SelectCoord.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="SelectCoord.Designer.cs">
+    <Compile Include="Forms\SelectCoord.Designer.cs">
       <DependentUpon>SelectCoord.cs</DependentUpon>
     </Compile>
     <Compile Include="TabDragger.cs" />
+    <Compile Include="TPRAttribute.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
-    <EmbeddedResource Include="BaseForm.resx">
+    <EmbeddedResource Include="Forms\BaseForm.resx">
       <DependentUpon>BaseForm.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="ImageForm.resx">
+    <EmbeddedResource Include="Forms\ImageForm.resx">
       <DependentUpon>ImageForm.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="SelectCoord.resx">
+    <EmbeddedResource Include="Forms\SelectCoord.resx">
       <DependentUpon>SelectCoord.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
