--- a/TPR_ExampleView/TPR_ExampleView.csproj
+++ b/TPR_ExampleView/TPR_ExampleView.csproj
@@ -90,36 +90,73 @@
   <ItemGroup>
     <Compile Include="Dll_Init.cs" />
     <Compile Include="Dll_LoadInSolution.cs" />
-    <Compile Include="Form1.cs">
+    <Compile Include="Controls\ExceptionInfoControl.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="Controls\ExceptionInfoControl.Designer.cs">
+      <DependentUpon>ExceptionInfoControl.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Controls\ExceptionListControl.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="Controls\ExceptionListControl.Designer.cs">
+      <DependentUpon>ExceptionListControl.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Extensions.cs" />
+    <Compile Include="Forms\Form1.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Form1.Designer.cs">
+    <Compile Include="Forms\Form1.Designer.cs">
       <DependentUpon>Form1.cs</DependentUpon>
     </Compile>
-    <Compile Include="HideTabPage.cs">
+    <Compile Include="Controls\HideTabPage.cs">
       <SubType>Component</SubType>
     </Compile>
-    <Compile Include="ImageForm.cs">
+    <Compile Include="Forms\ImageForm.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="ImageForm.Designer.cs">
+    <Compile Include="Forms\ImageForm.Designer.cs">
       <DependentUpon>ImageForm.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Controls\ImageInfo.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="Controls\ImageInfo.Designer.cs">
+      <DependentUpon>ImageInfo.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Controls\ImageList.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="Controls\ImageList.Designer.cs">
+      <DependentUpon>ImageList.cs</DependentUpon>
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Settings.cs" />
-    <Compile Include="Test.cs">
+    <Compile Include="Forms\Test.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Test.Designer.cs">
+    <Compile Include="Forms\Test.Designer.cs">
       <DependentUpon>Test.cs</DependentUpon>
     </Compile>
-    <EmbeddedResource Include="Form1.resx">
+    <EmbeddedResource Include="Controls\ExceptionInfoControl.resx">
+      <DependentUpon>ExceptionInfoControl.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Controls\ExceptionListControl.resx">
+      <DependentUpon>ExceptionListControl.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Forms\Form1.resx">
       <DependentUpon>Form1.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="ImageForm.resx">
+    <EmbeddedResource Include="Forms\ImageForm.resx">
       <DependentUpon>ImageForm.cs</DependentUpon>
       <SubType>Designer</SubType>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Controls\ImageInfo.resx">
+      <DependentUpon>ImageInfo.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Controls\ImageList.resx">
+      <DependentUpon>ImageList.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
@@ -131,7 +168,7 @@
       <DependentUpon>Resources.resx</DependentUpon>
       <DesignTime>True</DesignTime>
     </Compile>
-    <EmbeddedResource Include="Test.resx">
+    <EmbeddedResource Include="Forms\Test.resx">
       <DependentUpon>Test.cs</DependentUpon>
     </EmbeddedResource>
     <None Include="packages.config" />
@@ -179,11 +216,6 @@
       <Project>{c43cbba3-3098-474d-a8e5-d58bcd0d1591}</Project>
       <Name>ImageCollection</Name>
     </ProjectReference>
-    <ProjectReference Include="..\myLab\myLab.csproj">
-      <Project>{4b9d67fd-b4c2-4bc8-bdcb-129e00c0c778}</Project>
-      <Name>myLab</Name>
-      <Private>True</Private>
-    </ProjectReference>
     <ProjectReference Include="..\TestLibrary\TestLibrary.csproj">
       <Project>{61858e9e-5fe8-4805-b778-cbe06d65a31f}</Project>
       <Name>TestLibrary</Name>
@@ -206,6 +238,11 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="Resources\восстановить-32.png" />
+    <Content Include="Resources\удалить-все-32.png" />
+    <None Include="Resources\открыть-папку-32.png" />
+    <None Include="Resources\файл-изображения-32.png" />
+    <None Include="Resources\форма-32.png" />
+    <None Include="Resources\выбрать-все-32.png" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="..\packages\EMGU.CV.3.4.3.3016\build\EMGU.CV.targets" Condition="Exists('..\packages\EMGU.CV.3.4.3.3016\build\EMGU.CV.targets')" />
