--- a/ExplorerImage/ExplorerImage.csproj
+++ b/ExplorerImage/ExplorerImage.csproj
@@ -88,5 +88,11 @@
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
     </None>
   </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\BaseLibrary\BaseLibrary.csproj">
+      <Project>{CF3CCD2E-C24F-460E-904A-677BE24F3842}</Project>
+      <Name>BaseLibrary</Name>
+    </ProjectReference>
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
