--- a/TPR_ExampleView/TPR_ExampleView.csproj
+++ b/TPR_ExampleView/TPR_ExampleView.csproj
@@ -88,6 +88,12 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Controls\ProgressListControl.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="Controls\ProgressListControl.Designer.cs">
+      <DependentUpon>ProgressListControl.cs</DependentUpon>
+    </Compile>
     <Compile Include="Dll_Init.cs" />
     <Compile Include="Controls\ExceptionInfoControl.cs">
       <SubType>UserControl</SubType>
@@ -101,7 +107,9 @@
     <Compile Include="Controls\ExceptionListControl.Designer.cs">
       <DependentUpon>ExceptionListControl.cs</DependentUpon>
     </Compile>
-    <Compile Include="Extensions.cs" />
+    <Compile Include="Forms\FormP.cs">
+      <SubType>Form</SubType>
+    </Compile>
     <Compile Include="Forms\Form1.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -129,7 +137,15 @@
     <Compile Include="Controls\ImageList.Designer.cs">
       <DependentUpon>ImageList.cs</DependentUpon>
     </Compile>
+    <Compile Include="MenuMethod.cs" />
+    <Compile Include="MyMethodInfo.cs" />
     <Compile Include="Program.cs" />
+    <Compile Include="Controls\ProgressInfoControl.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="Controls\ProgressInfoControl.Designer.cs">
+      <DependentUpon>ProgressInfoControl.cs</DependentUpon>
+    </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Settings.cs" />
     <Compile Include="Forms\Test.cs">
@@ -143,6 +159,12 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Controls\ExceptionListControl.resx">
       <DependentUpon>ExceptionListControl.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Controls\ProgressInfoControl.resx">
+      <DependentUpon>ProgressInfoControl.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Controls\ProgressListControl.resx">
+      <DependentUpon>ProgressListControl.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Forms\Form1.resx">
       <DependentUpon>Form1.cs</DependentUpon>
