--- a/TPR_ExampleView/TPR_ExampleView.csproj
+++ b/TPR_ExampleView/TPR_ExampleView.csproj
@@ -88,6 +88,12 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Controls\LabeledProgressBar.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="Controls\LabeledProgressBar.Designer.cs">
+      <DependentUpon>LabeledProgressBar.cs</DependentUpon>
+    </Compile>
     <Compile Include="Controls\ProgressListControl.cs">
       <SubType>UserControl</SubType>
     </Compile>
@@ -106,6 +112,12 @@
     </Compile>
     <Compile Include="Controls\ExceptionListControl.Designer.cs">
       <DependentUpon>ExceptionListControl.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Forms\FormInvokeProgress.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Forms\FormInvokeProgress.Designer.cs">
+      <DependentUpon>FormInvokeProgress.cs</DependentUpon>
     </Compile>
     <Compile Include="Forms\FormP.cs">
       <SubType>Form</SubType>
@@ -160,6 +172,9 @@
     <EmbeddedResource Include="Controls\ExceptionListControl.resx">
       <DependentUpon>ExceptionListControl.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="Controls\LabeledProgressBar.resx">
+      <DependentUpon>LabeledProgressBar.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Controls\ProgressInfoControl.resx">
       <DependentUpon>ProgressInfoControl.cs</DependentUpon>
     </EmbeddedResource>
@@ -168,6 +183,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Forms\Form1.resx">
       <DependentUpon>Form1.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Forms\FormInvokeProgress.resx">
+      <DependentUpon>FormInvokeProgress.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Forms\ImageForm.resx">
       <DependentUpon>ImageForm.cs</DependentUpon>
@@ -224,11 +242,6 @@
       <Name>BaseLibrary</Name>
       <Private>True</Private>
     </ProjectReference>
-    <ProjectReference Include="..\ClassLibrary2\ClassLibrary2.csproj">
-      <Project>{b8db105d-e712-4edf-bc74-18804ec2ccf1}</Project>
-      <Name>ClassLibrary2</Name>
-      <Private>True</Private>
-    </ProjectReference>
     <ProjectReference Include="..\ExplorerImage\ExplorerImage.csproj">
       <Project>{bd244bb0-4a77-4a7f-8fc5-0bbf79e9a0cf}</Project>
       <Name>ExplorerImage</Name>
@@ -236,10 +249,6 @@
     <ProjectReference Include="..\ImageCollection\ImageCollection.csproj">
       <Project>{c43cbba3-3098-474d-a8e5-d58bcd0d1591}</Project>
       <Name>ImageCollection</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\TestLibrary\TestLibrary.csproj">
-      <Project>{61858e9e-5fe8-4805-b778-cbe06d65a31f}</Project>
-      <Name>TestLibrary</Name>
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
@@ -258,7 +267,10 @@
     <None Include="Resources\сохранить-32.png" />
   </ItemGroup>
   <ItemGroup>
+    <None Include="Resources\воспроизведение-32.png" />
     <Content Include="Resources\восстановить-32.png" />
+    <None Include="Resources\пауза-32.png" />
+    <None Include="Resources\стоп-32.png" />
     <Content Include="Resources\удалить-все-32.png" />
     <None Include="Resources\открыть-папку-32.png" />
     <None Include="Resources\файл-изображения-32.png" />
