--- a/TPR_ExampleView/TPR_ExampleView.csproj
+++ b/TPR_ExampleView/TPR_ExampleView.csproj
@@ -131,6 +131,12 @@
     <Compile Include="Controls\HideTabPage.cs">
       <SubType>Component</SubType>
     </Compile>
+    <Compile Include="Forms\FormSettings.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Forms\FormSettings.Designer.cs">
+      <DependentUpon>FormSettings.cs</DependentUpon>
+    </Compile>
     <Compile Include="Forms\ImageForm.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -186,6 +192,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Forms\FormInvokeProgress.resx">
       <DependentUpon>FormInvokeProgress.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Forms\FormSettings.resx">
+      <DependentUpon>FormSettings.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Forms\ImageForm.resx">
       <DependentUpon>ImageForm.cs</DependentUpon>
@@ -271,6 +280,8 @@
     <Content Include="Resources\восстановить-32.png" />
     <None Include="Resources\пауза-32.png" />
     <None Include="Resources\стоп-32.png" />
+    <None Include="Resources\настройки-32.png" />
+    <None Include="Resources\панель-дополнительной-информаиции-32.png" />
     <Content Include="Resources\удалить-все-32.png" />
     <None Include="Resources\открыть-папку-32.png" />
     <None Include="Resources\файл-изображения-32.png" />
