--- a/TPR_ExampleView/App.config
+++ b/TPR_ExampleView/App.config
@@ -22,6 +22,24 @@
             <setting name="ExplorerPath" serializeAs="String">
                 <value />
             </setting>
+            <setting name="MultiImage" serializeAs="String">
+                <value>False</value>
+            </setting>
+            <setting name="SaveNewImageToFile" serializeAs="String">
+                <value>False</value>
+            </setting>
+            <setting name="SaveImageDir" serializeAs="String">
+                <value />
+            </setting>
+            <setting name="SaveFileNameMask" serializeAs="String">
+                <value />
+            </setting>
+            <setting name="SaveFileFormatIndex" serializeAs="String">
+                <value>0</value>
+            </setting>
+            <setting name="SaveFileReplace" serializeAs="String">
+                <value>False</value>
+            </setting>
         </TPR_ExampleView.Properties.Settings>
     </userSettings>
 </configuration>
