--- a/TPR_ExampleView/TPR_ExampleView.csproj
+++ b/TPR_ExampleView/TPR_ExampleView.csproj
@@ -220,6 +220,7 @@
       <DependentUpon>Test.cs</DependentUpon>
     </EmbeddedResource>
     <None Include="packages.config" />
+    <None Include="Properties\DataSources\TPR_ExampleView.Properties.Settings.datasource" />
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
