--- a/TPR_ExampleView/App.config
+++ b/TPR_ExampleView/App.config
@@ -32,7 +32,7 @@
                 <value />
             </setting>
             <setting name="SaveFileNameMask" serializeAs="String">
-                <value />
+                <value>%N\%f%u</value>
             </setting>
             <setting name="SaveFileFormatIndex" serializeAs="String">
                 <value>0</value>
